# Morphogenesis

./: .gitignore
Morphogenesis/: .gitignore  MorphogenesisOLD.kdev4  gitignore
Morphogenesis/.kdev4/: Morphogenesis.kdev4
Morphogenesis/data/: data.kdev4
Morphogenesis/data/.kdev4/: data.kdev4
Morphogenesis/src/: CMakeLists (checkDemo).txt  CMakeLists (createDemo).txt  CMakeLists.txt  CMakeListsNICK.txt  CMakeLists_createDemo.txt  CMakeLists_original (copy).txt  DeviceInfo.cpp  InsertParticlesCL__bufI(&m_Fluid, FGCELL).csv  MinimalSim.cpp  Notes and Tasks.txt  README.txt  RunCL.cpp  RunCL.h  SpecfileBatchGenerator.cpp  check_demo.cpp  config.json  createDemo.cpp  createDemo2.cpp  cutil_math.h  env_variables_kdev.txt  fileCL_IO.cpp  file_IO.cpp  fluid.h  fluid_system.cpp  fluid_system.h  fluid_system_cuda.cu  fluid_system_cuda.cuh  fluid_system_opencl.cl  fluid_system_opencl.h  host_CL.cpp  host_CUDA.cpp  kernelTest.cl  kernelTest_OLD.cl  load_sim.cpp  make_demo.cpp  make_demo2.cpp  minimal_sim_old.cpp  opencl_config.json  particles_pos_vel_color100001.csv  randCL_well512.cl  (+4 more)
Morphogenesis/src (copy)/: CMakeLists.txt  DeviceInfo.cpp  check_demo.cpp  file_IO.cpp  fluid.h  fluid_system.cpp  fluid_system.h  fluid_system_cuda.cu  fluid_system_opencl.cl  host_CUDA.cpp  make_demo2.cpp
Morphogenesis/src (copy)/.kdev4/: src.kdev4
Morphogenesis/src/.kdev4/: src.kdev4
Morphogenesis/src/BACKUP/: fluid_system.cpp  fluid_system.h
Morphogenesis/src/demo/: .~lock.particles_pos_vel_color100001.csv#  InsertParticlesCL__bufI(&m_Fluid, FGCELL).csv  SimParams.txt  SimParams_backup.txt  SpecificationFile.txt  genome.csv  particles_pos_vel_color100001.csv
Morphogenesis/src/demo/backup/: SimParams.txt  SpecificationFile.txt  genome.csv  kernelTest.cl  particles_pos_vel_color100001.csv  particles_pos_vel_color100001.vtp
Morphogenesis/src/demo/check/: SimParams.txt  particles_pos_vel_color100001.csv  particles_pos_vel_color100001.vtp
Morphogenesis/src/demo/out_backup/: SpecificationFile.txt  particles_pos_vel_color100000.csv  particles_pos_vel_color100000.vtp  particles_pos_vel_color100001.csv  particles_pos_vel_color100210.csv  results.csv
Morphogenesis/src/doxy/: dconfig
Morphogenesis/src/install_scripts/: settings.md
Morphogenesis/src/kernels/: kernelTest.cl  kernelTest_backup.cl  kernelTest_backup_m28.cl
src/: CMakeLists.txt  SpecfileBatchGenerator.cpp  allocator.cl  allocator.h  check_demo.cpp  cutil_math.h  fluid.h  fluid_system.cpp  fluid_system.h  fluid_system_cuda.cu  host_CUDA.cpp  load_sim.cpp  make_demo.cpp  make_demo2.cpp
